Material with blend mode «alpha blend» ignores volumetric depth when rendering (Eevee) #65569

Closed
opened 2019-06-06 16:50:02 +02:00 by Alexey · 5 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GT 610/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: e80cbdac33
Worked: (optional)

Short description of error
Material with blend mode «alpha blend» ignores volumetric depth (Eevee)

Exact steps for others to reproduce the error
Create an object with an alpha texture and with blend mode «alpha blend». We place it in a cube with volumetric (default volume scatter node), make the cube large enough so that the object disappears behind the volumetric. In the display render preview everything works, but when rendering the object becomes visible.

blender_2019-06-06_17-41-11.jpg
AlphaBlendeVolume.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GT 610/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: `e80cbdac33` Worked: (optional) **Short description of error** Material with blend mode «alpha blend» ignores volumetric depth (Eevee) **Exact steps for others to reproduce the error** Create an object with an alpha texture and with blend mode «alpha blend». We place it in a cube with volumetric (default volume scatter node), make the cube large enough so that the object disappears behind the volumetric. In the display render preview everything works, but when rendering the object becomes visible. ![blender_2019-06-06_17-41-11.jpg](https://archive.blender.org/developer/F7090241/blender_2019-06-06_17-41-11.jpg) [AlphaBlendeVolume.blend](https://archive.blender.org/developer/F7090243/AlphaBlendeVolume.blend)
Author

Added subscriber: @tombambadil

Added subscriber: @tombambadil
Alexey changed title from Material with blend mode «alpha blend» ignores volumetric depth when rendering to Material with blend mode «alpha blend» ignores volumetric depth when rendering (Eevee) 2019-06-06 16:50:39 +02:00

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-06-14 11:35:56 +02:00

@fclem known limitation or not?

@fclem known limitation or not?

This issue was referenced by 88cce6faea

This issue was referenced by 88cce6faea6930321561df22822748c32ee98c1a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65569
No description provided.