Fix T65569 Eevee: Volumetrics on alphablend surf. not working in renders

The wrong volume buffer was used one frame out of two.